--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -86,7 +86,9 @@
 	text-decoration: underline;
 	text-transform: uppercase;
 	font-weight: 500;
-
+	&.inline {
+		display: inline-block;
+	}
 	&:hover {
 		text-decoration: none;
 	}
@@ -1174,7 +1176,6 @@ b, strong {
 		}
 }
 .b-seo {
-	padding-bottom: 110px;
 	ul {
 		list-style: circle outside url(../img/seo_list.png);
 		li {
@@ -2522,7 +2523,41 @@ b, strong {
 		}
 	}
 }
-
+.b-about {
+	&__link {
+		display: inline-block;
+		font-size: 12px;
+		margin-right: 30px;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+	&__text {
+		font-size: 15px;
+		line-height: 20px;
+	}
+	&__title.gradient.text {
+		padding: 0;
+	}
+	&__waranty {
+		display: block;
+		width: 165px;
+		height: 186px;
+		background: url(../img/about_waranty.png) no-repeat;
+	}
+	&__sertificat {
+		margin-bottom: 30px;
+		display: block;
+		&-img {
+			width: 100%;
+			height: 100%;
+		}
+		&-link {
+			color: #666666;
+			font-size: 12px;
+		}
+	}
+}
 /*********fancy******/
 .fancybox-container {
 	font-family: inherit;
