--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -125,6 +125,7 @@
 	}
 	&.download {
 		display: inline-block;
+		font-weight: normal;
 		position: relative;
 		padding-left: 35px;
 		font-size: 14px;
@@ -285,6 +286,17 @@ h1 {
 	font-size: 60px;
 	font-weight: 200;
 }
+
+ul.diamond {
+	list-style: circle outside url(../img/seo_list.png);
+	&.oneline li{
+    	margin-left: 20px;
+	}
+	li {
+		margin-left: 60px;
+		padding-bottom: 20px;
+	}
+	}
  /* Style the list */
 ul.breadcrumb {
 	padding: 10px 16px;
@@ -353,6 +365,24 @@ ul.breadcrumb li a:hover {
 								height: 3px;
 								width: 100%;
 								margin-top: 9px;
+
+					}
+					&.with_after:after {
+					/* Градиент */
+								background: rgba(215,14,98,1);
+								background: -moz-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -webkit-gradient(left top, right top, color-stop(0%, rgba(215,14,98,1)), color-stop(100%, rgba(7,88,186,1)));
+								background: -webkit-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -o-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -ms-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: linear-gradient(to right, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d70e62', endColorstr='#0758ba', GradientType=1 );
+								content: "";
+								display: block;
+								/* Вместо толщины */
+								height: 3px;
+								width: 50px;
+								margin: 9px auto;
 
 					}
 				}
@@ -1176,13 +1206,10 @@ b, strong {
 		}
 }
 .b-seo {
-	ul {
-		list-style: circle outside url(../img/seo_list.png);
-		li {
-			margin-left: 60px;
-			padding-bottom: 20px;
-		}
-		}
+	&__smalltext {
+		font-size: 15px;
+		line-height: 20px;
+	}
 	&__title {
 		font-size: 36px;
 		letter-spacing: 2px;
@@ -2557,6 +2584,51 @@ b, strong {
 			font-size: 12px;
 		}
 	}
+}
+.b-gallery {
+	&__item {
+		margin-bottom: 90px;
+		&-link {
+			color: #666666;
+			font-size: 16px;
+			text-decoration: none;
+			margin-top: 30px;
+		}
+	}
+	&__img {
+		width: 100%;
+		height: 100%;
+		max-height: 350px;
+		&-fullwidth {
+			width: 100%;
+			height: 100%;
+			max-height: 580px;
+		}
+		&-doubleheight {
+			width: 100%;
+			height: 100%;
+			max-height: 700px;
+		}
+	}
+	&__text {
+		margin-top: 30px;
+		font-size: 14px;
+		color: #666;
+	}
+	&__video {
+		position: relative;
+		margin-bottom: 90px;
+		&-play {
+			position: absolute;
+			left: calc(50% - 40px);
+			top: calc(50% - 40px);
+			cursor: pointer;
+			width: 80px;
+			height: 80px;
+			background: url(../img/play.png) no-repeat;
+		}
+	}
+
 }
 /*********fancy******/
 .fancybox-container {
