--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -285,6 +285,7 @@ h1 {
 	text-transform: uppercase;
 	font-size: 60px;
 	font-weight: 200;
+	line-height: 1.4;
 }
 
 ul.diamond {
@@ -2744,12 +2745,24 @@ b, strong {
 	&__tabs {
 		width: 100%;
 		vertical-align: middle;
-		padding: 2px 0px 50px 0px;
-		&-text {
-			vertical-align: middle;
-		}
+		padding-top:2px;
+		margin-bottom: 50px;
+		&:after {
+					z-index: 1;
+					display: block;
+					content: '';
+					position: absolute;
+					width: 100%;
+					top: 2px;
+					left:calc(100% - 15px);
+					height:calc(100% - 52px);
+					background-color: #fff;
+
+				}	
 		&-element {
-			display: inline-block;
+			display: flex;
+			justify-content: center;
+			align-items: center;			
 			background-color: #fff;
 			padding: 30px;
 			text-align: center;
@@ -2759,13 +2772,13 @@ b, strong {
 			color: $blue;
 			width: 16.6666%;
 			border-right: 2px solid #e6e1e7;
-			vertical-align: middle;
 			&.active {
 				background-color: transparent;
 				border-right-color: transparent;
 				color: #333;
 			}
 			&:last-child,&:first-child {
+				justify-content: start;
 				text-align: left;
 			}
 			&:last-child {
@@ -2780,6 +2793,7 @@ b, strong {
 		position: relative;
 		padding-left: 98px;
 		margin-right: 70px;
+		width: calc(20% - 57px);
 		&-container {
 			margin-top: 70px;
 			margin-bottom: 50px;
@@ -2793,6 +2807,9 @@ b, strong {
 		}
 		&-value {
 			font-weight: 200;
+			line-height: 1;
+			white-space:nowrap;
+			text-overflow: ellipsis;
 			font-size: 36px;
 		}
 		&-unit {
@@ -2829,6 +2846,28 @@ b, strong {
 			background-image: url(../img/item_icon4.png);
 			width: 78px;
 			height: 32px;
+		}
+		&.weight:before {
+			background-image: url(../img/item_icon5.png);
+			width: 40px;
+			height: 35px;
+			left: 30px;
+		}
+		&.weight2:before {
+			background-image: url(../img/item_icon6.png);
+			width: 43px;
+			height: 38px;
+			left: 30px;
+		}
+		&.expense:before {
+			background-image: url(../img/item_icon7.png);
+			width: 55px;
+			height: 41px;
+		}
+		&.basis:before {
+			background-image: url(../img/item_icon8.png);
+			width: 42px;
+			height: 53px;
 		}
 	}
 }
