--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $default-font: "roboto-example", sans-serif;
 $accent:rgba(215,14,98,1);
 $blue: #1f4a8e;
 $grey: #f9f9f9;
+$link: #ff0066;
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
 $grid-columns: 12;
