--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -585,14 +585,88 @@ b, strong {
 	}
 	&__link {
 		letter-spacing: 1px;
+		&:hover {
+			color: $link;
+		}
 	}
 	&__phone {
-		font-size: 16px;
+		font-size: 14px;
+		letter-spacing: 1px;
 		margin-right: 19px;	
 	}
 	&__icons-container {
 		float: right;
 	}
+	&__dropdown {
+		// display: none;
+		position: absolute;
+		width: 100%;
+		background-color: #f6f6f6;
+		z-index: 2;
+		left: 0;
+		top: 80px;
+		padding: 40px 0px 150px 0px;
+		&-catalogitem {
+			margin-bottom: 23px;
+			position: relative;
+		}
+		&-imgblock {
+			margin-right: 20px;
+			width: 150px;
+			height: 89px;
+		}
+		&-img {
+			width: 100%;
+			height: 100%;
+		}
+		&-catalogname {
+			text-transform: none;
+			font-size: 17px;
+		}
+		&-newitem{
+			position: absolute;
+			top: 0;
+			font-size: 10px;
+			padding: 3px 10px;
+		}
+	}
+
+	&__banner {
+			width: 100%;
+			min-height: 350px;
+			display: flex;
+			align-items: center;
+			padding: 0 20px;
+			background-size: cover;
+			background-position: center;
+			&-title {
+				font-size: 25px;
+				line-height: 27px;
+				padding: 5px 10px 5px 20px;
+				font-family: 'GTWalsheimPro';
+				font-weight: 200;
+				color: #fff;
+			}
+			&-buy {
+				background-color: #fff;
+				padding: 0px 0px 0px 12px;
+				font-weight: bold;
+				font-size: 11px;
+				margin-top: 10px;
+				display: inline-block;
+			}
+			&-button {
+				color: #fff;
+				font-weight: bold;
+				font-size: 11px;
+				text-align: center;
+				padding: 9px 16px 9px 16px;
+				margin-left: 12px;
+				border: none;
+				background-color: $link;
+				text-transform: uppercase;
+			}
+		}
 }
 
 .b-header-icons {
