--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -11,7 +11,9 @@
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProLight/GTWalsheimProLight", 300);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProRegular/GTWalsheimProRegular", 400);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProMedium/GTWalsheimProMedium", 500);
+@include font-face("PTSans", "../fonts/PTSansRegular/PTSans-Regular");
 @include font-face("MetrolineIcons", "../fonts/MetrotileIcon/metrotile");
+
 
 
 
