--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -579,8 +579,27 @@ b, strong {
 	&__item {
 		display: inline-block;
 		margin-right: 72px;
+		position: relative;
 		&:last-child{
 			margin-right: 0;
+		}
+		&.active {
+			&:after {
+				content: '';
+	 			width: 0; 
+	 			height: 0; 
+	 			border-left: 10px solid transparent;
+	 			border-right: 10px solid transparent;
+	 			border-top: 10px solid #fff;
+				position: absolute;
+				bottom: 0;
+				left: calc(50% - 10px);
+				margin-bottom: -40px;
+				z-index: 12; 						
+			}
+			.b-topmenu__link {
+				color: $link;
+			}
 		}
 	}
 	&__link {
@@ -592,7 +611,10 @@ b, strong {
 	&__phone {
 		font-size: 14px;
 		letter-spacing: 1px;
-		margin-right: 19px;	
+		margin-right: 19px;
+		&:hover {
+			color: $link;
+		}	
 	}
 	&__icons-container {
 		float: right;
@@ -602,10 +624,31 @@ b, strong {
 		position: absolute;
 		width: 100%;
 		background-color: #f6f6f6;
-		z-index: 2;
+		z-index: 11;
 		left: 0;
 		top: 80px;
 		padding: 40px 0px 150px 0px;
+		&.search {
+			padding: 20px 0px 40px 0px;
+			
+		}
+		&.favorites {
+			padding: 20px;
+			width: auto;
+			top: 64px;
+			right: 0;
+			max-width: 320px;
+			left: auto;
+		}
+		&.login {
+			padding: 20px;
+			width: auto;
+			min-width: 315px;
+			top: 64px;
+			right: 0;
+			max-width: 320px;
+			left: auto;
+		}
 		&-catalogitem {
 			margin-bottom: 23px;
 			position: relative;
@@ -629,8 +672,168 @@ b, strong {
 			font-size: 10px;
 			padding: 3px 10px;
 		}
+		&-menu{
+			font-family: 'PTSans',sans-serif;
+			margin-bottom: 25px;
+		}
+		&-linktitle {
+			font-size: 15px;
+			color: #000;
+			margin-bottom: 10px;
+			text-transform: none;
+			display: block;
+			&:hover {
+				color: #000;
+			}
+		}
+		&-link {
+			font-size: 13px;
+			color: #666666;
+			margin-bottom: 10px;
+			text-transform: none;
+			display: block;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			&:hover {
+				color: #666666;
+			}
+		}
+		&-close {
+			width: 14px;
+			height: 14px;
+			background: url(../img/close.svg) no-repeat;
+			background-size: contain;
+			margin-left: 60px;
+			margin-top: 20px;
+		}
 	}
+	&__favorites {
+		&-container {
+			border-bottom: 1px solid #cccccc;
+			margin-bottom: 17px;
+		}
+		&-imgblock {
+			width: 80px;
+			height: 50px;
+			margin-right: 25px;
+		}
+		&-img {
+			width: 100%;
+			height: 100%;
+		}
+		&-link {
+			text-transform: none;
+			font-size: 12px;
+			font-weight: normal;
+		}
+		&-quantity {
+			font-size: 13px;
+			margin: 12px 0px 12px 0;
+			text-transform: none;
+		}
+		&-desc {
+			position: relative;
+		}
+		&-eachprice {
+			font-size: 10px;
+			color: #666;
+			margin-left: 60px;
+			display: inline-block;
 
+		}
+		&-price {
+			font-size: 19px;
+			margin-bottom: 12px;
+		}
+		&-close {
+			width: 14px;
+			height: 14px;
+			background: url(../img/close.svg) no-repeat;
+			background-size: contain;
+			position: absolute;
+			right: 0;
+			top: 7px;
+
+		}
+		&-pages {
+			text-align: center;
+			counter-reset: section;
+			margin-bottom: 30px;
+		}
+		&-pagelink {
+				background-color: #fff;
+				border:2px solid $blue;
+				border-radius: 50%;
+				width: 10px;
+				height: 10px;
+				margin-right: 12px;
+				display: inline-block;
+				font-weight: bold;
+				line-height: 8px;
+			&:before {
+				visibility: hidden;
+				content: '';
+  				counter-increment: section;
+  				content: counter(section);	
+			}
+			&.active{
+				font-size: 11px;
+				line-height: 12px;
+				width: 15px;
+				height: 15px;
+				color:#fff;
+				text-align: center;
+				background-color: $blue;
+				&:before {
+					visibility: visible;				
+					display: block;
+			}
+			}
+		}
+		&-button.button.buy {
+			width: 100%;
+			color: $blue;
+			font-weight: bold;
+			&:hover {
+				color: #fff;
+			}
+		}
+	}
+	&__login {
+		&-container {
+			margin-top: 25px;
+		}
+		&-title.gradient.text {
+			display: inline-block;
+			font-family: 'GTWalsheimPro';
+			font-weight: 300;
+			font-size: 25px;
+			text-transform: uppercase;
+			margin-right: 23px;
+		}
+		&-registration {
+			display: inline;
+		}
+		&-input.b-calc__form-input {
+			font-size: 14px;
+			margin-bottom: 0;
+		}
+		&-label {
+			display: block;
+			font-size: 12px;
+			color: #666;
+			text-transform: none;
+			margin-bottom: 0;
+		}
+		&-forgot {
+			text-transform: none;
+			font-weight: normal;
+			font-size: 12px;
+			margin: 7px 0px 30px 0px;
+			display: inline-block;
+		}
+	}
 	&__banner {
 			width: 100%;
 			min-height: 350px;
@@ -639,20 +842,62 @@ b, strong {
 			padding: 0 20px;
 			background-size: cover;
 			background-position: center;
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			&-container {
+				position: relative;
+				&:before {
+					content: '';
+					width: 22px;
+					height: 8px;
+					background: url(../img/arrow_right_white.png) no-repeat;
+					display: block;
+					position: absolute;
+					left: 0;
+					top: 14px;
+					margin-left: -12px;
+				}
+				&.after {
+					&:before {
+						display: none;
+					}
+					&:after{
+						content: '';
+						width: 22px;
+						height: 8px;
+						background: url(../img/arrow_right_white.png) no-repeat;
+						display: block;
+						position: absolute;
+						right: 0;
+						top: 14px;
+						margin-right: -12px;
+					}
+				}				
+			}
+			&-text {
+				background-color: #fff;
+				padding: 10px;
+				font-size: 12px;
+				font-weight: 300;
+				text-transform: none;
+
+			}
 			&-title {
 				font-size: 25px;
 				line-height: 27px;
-				padding: 5px 10px 5px 20px;
+				padding: 5px 10px 5px 15px;
 				font-family: 'GTWalsheimPro';
 				font-weight: 200;
 				color: #fff;
+				margin-bottom: 10px;
 			}
 			&-buy {
 				background-color: #fff;
 				padding: 0px 0px 0px 12px;
 				font-weight: bold;
 				font-size: 11px;
-				margin-top: 10px;
 				display: inline-block;
 			}
 			&-button {
@@ -675,6 +920,41 @@ b, strong {
 		margin-left: 36px;
 		margin-right: 0;
 		font-size: 16px;
+		position: relative;
+		&:hover {
+			color: $link;
+		}
+		&.active {
+			color: $link;
+			&:after {
+				content: '';
+	 			width: 0; 
+	 			height: 0; 
+	 			border-left: 10px solid transparent;
+	 			border-right: 10px solid transparent;
+	 			border-top: 10px solid #fff;
+				position: absolute;
+				bottom: 0;
+				left: calc(50% - 10px);
+				margin-bottom: -37px;
+				z-index: 12; 						
+			}
+			.b-topmenu__link {
+				color: $link;
+			}
+		}
+		&-count {
+			padding-left: 7px;
+			display: inline-block;
+			font-size: 12px;
+			color: #000;
+			position: absolute;
+			top: 4px;
+			max-width: 40px;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+		}		
 	}
 }
 
@@ -2457,6 +2737,9 @@ b, strong {
 		&-text {
 			font-size: 14px;
 		}
+	}
+	&__button {
+		margin-top: 20px;
 	}
 }
 .b-detail {
