--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -8,3 +8,4 @@
 @import "../libs/metrotileIcons/metrotile-ie7.css";
 @import "../libs/metrotileIcons/metrotile.css";
 @import "../libs/fancybox/dist/jquery.fancybox.min.css";
+@import "../libs/mmenu/jquery.mmenu.all.css";
