--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -14,19 +14,667 @@
 	.b-header-icons__link {
 		margin-left: 18px;
 	}	
+
 	
 }
 
 // ≥992px
-@include media-breakpoint-down(md) {
-	.humb {
-		display: inline-block;
+@include media-breakpoint-down(md) {	
+	body {
+	    font-size: 15px;
+	    line-height: 1.5;
+	}	
+	h1,.b-news__tabs-link.active {
+		font-size: 30px;
+		line-height: 40px;
+	}	
+	h2,a {
+		&.gradient.text{
+			font-size: 30px;
+			padding-top: 60px;
+			padding-bottom: 50px;
+		}
 	}
+	h3.gradient.text {
+		font-size: 24px;
+	}
+	.b-intro {
+		&__title {
+		font-size: 72px;
+		line-height: 70px;
+		}
+		&__text {
+    		font-size: 14px;
+		}
+		&__description {
+			bottom: 220px;
+
+		}
+	}
+	#customDots.owl-dots {
+		right: auto;
+		left: 15px;
+		bottom: 80px;
+	}
+	.gutter {
+		&_bottom {
+			padding-bottom: 50px;
+		}
+		&_top {
+			padding-top: 60px;
+		}
+		&_no {
+			padding-top: 0 !important;
+			padding-bottom: 0 !important;
+		}
+	}
+	.margin {
+		&_top100 {
+			margin-top: 60px;
+		}
+		&_bot100 {
+			margin-bottom: 50px;
+		}
+		&_bot50 {
+			margin-bottom: $gutter;
+		}
+		&_top50 {
+			margin-top: $gutter;
+		}
+		&_top_gut {
+			margin-top: $gutter;
+		}
+		&_bot_gut {
+			margin-bottom: $gutter;
+		}
+		&_right_gut {
+			margin-right: $gutter;
+		}
+	}
+	.b-stats {
+		&__numbers {
+			    margin-right: 30px;
+			&-num {
+			    font-size: 30px;
+				font-weight: 300;
+			}
+			&-title {
+				font-size: 13px;
+			}
+		}
+		&__gutter {
+
+		    padding-top: 154px;
+
+		}		
+	}
+	.b-features {
+		&__list {
+			&-title{
+				font-size: 15px;
+			}
+			&-item {
+			padding-left: 70px;
+			}
+			&__text {
+			    font-size: 12px;
+			}		
+		}
+			&__container {
+			    padding-top: 60px;
+
+			}	
+	}
+	.b-catalog {
+		&__item {
+			&-link {
+			    font-size: 16px;
+
+			}
+		}
+	}
+	.b-professionals {
+		&__desc {
+			font-size: 12px;
+			line-height: 15px;
+			&-link {
+				display: block;
+				margin-right: 0;
+				margin-bottom: 10px;
+			}
+		}
+	}
+	.b-midbanner {
+		padding-top: 30px;
+		line-height: 1.2;
+		font-weight: normal;
+		&__button {
+			margin-top: 25px;
+		}		
+	}	
+	.b-news {
+		&__tabs {
+			font-size: 12px;
+		}
+	}	
+	#wideslider3.wideslider {
+		width: 100%;
+	}		
+	.b-seo {
+		&__title {
+			padding-top: 50px;
+		    font-size: 30px;
+		}
+		&__block {
+		    font-size: 13px;
+		    padding-bottom: 50px;
+			&-padding {
+				font-size: 15px;
+
+				}
+
+		}
+	}			
 }
 
 // ≥768px
 @include media-breakpoint-down(sm) {
+	.mobilefluid {
+		width: 100%;
+		.col-12 {
+			padding: 0;
+		}
+	}
+	.b-stats {
+		&__numbers {
+    	margin-right: 12px;
+	    	&-num {
+	    	font-size: 20px;
+	    	padding-right: 5px;
+		}
+		&-title {
+			font-size: 12px;
+			line-height: 1.2;
+		}
+	}
+		&__gutter {
+			padding-top: 20px;
+			padding-bottom: 20px;
+		    margin-top: 15px;
 
+		}
+	}
+.b-features {
+	&__list {
+		&-title{
+			font-size: 14px;
+		}
+		&-item {
+		padding-left: 70px;
+		}
+	}
+}
+	body {
+		font-size: 13px;
+	}
+	h1,.b-news__tabs-link.active {
+		font-size: 26px;
+		line-height: 30px;
+	}
+	.gradient.text {
+		&:after {
+			height: 1px;
+		}
+	}	
+	h2,a {
+		&.gradient.text{
+			font-size: 26px;
+			line-height: 30px;
+			padding-top: 40px;
+			padding-bottom: 33px;
+			&:after {
+				height: 1px;
+			}
+		}
+	}
+	.b-intro {
+		&__title {
+			font-size: 36px;
+			line-height: 35px;
+			padding: 10px;
+		}	
+		&__text {
+			font-size: 12px;
+			line-height: 16px;	
+			padding:10px;
+		}
+		&__item {
+			min-height: 517px;
+		}
+		&__description {
+		    max-width: 265px;
+		    bottom: 130px;
+		}
+		&__about {
+			padding-bottom: 33px;
+			br {
+				display: none;
+			}
+		}
+	}
+	#customDots,#customDots2 {	
+		&.owl-dots {
+		    width: 100%;
+		    text-align: center;
+		    right: auto;
+		    bottom: 53px;
+		    display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		button{
+			&.owl-dot{
+				width: 10px;
+				height: 10px;
+				line-height: 15px;
+				margin-right: 11px;
+				border: 2px solid #fff;
+				&.active {
+					margin-top: 0;
+					text-align: center;
+					background-color: #fff;
+				    height: 15px;
+				    width: 15px;
+					line-height: 10px;
+				    &:before{
+				    	visibility: visible;
+					}
+				}
+				&:before {
+					text-align: center;
+					visibility: hidden;
+					color: $blue;
+					font-weight: bold;
+					font-size: 11px;
+					line-height: 11px;
+					content: counters(dots, ".");
+				}
+			}
+		}
+	}
+	#customDots2 {
+		&.owl-dots {
+			position: relative;
+			bottom: auto;
+			right: auto;
+			margin-top: 30px;
+		}
+		button{
+			&.owl-dot{
+				border: 2px solid $blue;
+				&.active {
+					background-color: $blue;
+					border-color: $blue !important;
+				}
+				&:before {
+					color: #fff;
+				}
+			}
+		}
+	}
+
+	h3.gradient.text,h4.gradient.text {
+		font-size: 20px;
+		line-height: 26px;
+	}
+	.fz18 {
+		font-size: 15px;
+		line-height: 18px;
+	}
+	.humb {
+		display: inline-block;
+	}	
+	.b-header__menu {
+		display: none;
+		width: 100%;
+		position: absolute;
+		top: 80px;
+		left: 0;
+		background-color: #fff;
+		z-index: 3000;
+		padding:0px 35px;
+		height: 100vh;
+		.b-topmenu__list {
+				display: block;
+				width: 100%;
+			
+			.b-topmenu__item {
+				display: block;
+				width: 100%;
+				padding: 20px 0px;
+				border-top: 1px solid #ccc;
+			}
+
+		}
+	}
+	.b-features__container {
+		padding-top: 40px;
+	}
+	.gutter {
+		&_bottom {
+			padding-bottom: $gutter2_media;
+		}
+		&_top {
+			padding-top: $gutter2_media;
+		}
+		&_no {
+			padding-top: 0 !important;
+			padding-bottom: 0 !important;
+		}
+	}
+	.margin {
+		&_top100 {
+			margin-top: 40px;
+		}
+		&_bot100 {
+			margin-bottom: 40px;
+		}
+		&_bot50 {
+			margin-bottom: $gutter;
+		}
+		&_top50 {
+			margin-top: $gutter;
+		}
+		&_top_gut {
+			margin-top: $gutter;
+		}
+		&_bot_gut {
+			margin-bottom: $gutter;
+		}
+		&_right_gut {
+			margin-right: $gutter;
+		}
+	}
+	.b-features__list-item,.b-professionals__desc {
+		font-size: 13px;
+		line-height: 18px;
+
+	}
+
+	.b-midbanner {
+	min-height: 335px;
+	font-size: 31px;
+	line-height: 36px;
+		&__button {
+		margin-top: 20px;
+		}
+		&__title {
+			padding: 0 15px;
+			font-size: 25px;
+		}
+		&__button {
+			margin-top: 90px;
+		}
+	}
+	.b-seo {
+		&__title {
+		font-size: 20px;
+		font-weight: 200;
+		padding-top: 10px;
+		padding-bottom: 15px;
+
+	}
+		&__block {
+			font-size: 13px;
+			padding-bottom: 30px;
+			&-padding {
+				padding-top: 30px;
+			    font-size: 13px;
+			    line-height: 1.2;
+			    -webkit-box-ordinal-group: 0;
+				order: -1;
+
+			}
+			&-gradient {
+				padding-bottom: 30px;
+				width: 100%;
+			}
+		}
+		&__container {
+		    min-height: 190px;
+
+		}
+		&__image {
+
+		    margin-bottom: 30px;
+
+		}
+		.buy2 {
+
+		    margin-top: 0px;
+		    margin-bottom: 30px;
+
+		}
+	}	
+	.counter {
+		display: none;
+	}	
+	.navContainer {
+		display: none;
+	}
+	.b-collections {
+		.wideslider {
+		    width: 90%;
+		    margin: auto;
+		}	
+	}
+	.owl-carousel .owl-stage-outer {
+		overflow: visible;
+	}
+	.owl-carousel.owl-drag .owl-item {
+	}
+	.b-catalog {
+		&__item {
+			&-top {
+				height: 160px;
+			}
+			&-desc {
+				margin-top: 13px;
+			}
+			&-link {
+				margin-right: 8px;
+			}
+			&-link,&-price {
+				margin-top: 0;
+				font-size: 15px;
+				display: inline-block;
+			}
+		}
+	}
+	.b-news {
+		&__item {
+		    margin-top: 0px;
+		}
+		&__tabs {
+			text-align: center;
+			padding-bottom: 10px;
+			&-link {
+   				text-align: left;
+				margin-left: 0;	
+				display: block;
+				padding: 15px 0;
+				padding-left: 15px;
+				border-top: 1px solid #fff;
+				&:after {
+				    content: '';
+				    position: absolute;
+				    right: 15px;  
+				    margin-top: 5px;
+				    width: 0; 
+					height: 0; 
+					border-top: 5px solid transparent;
+					border-bottom: 5px solid transparent;
+					border-left: 5px solid $blue;
+				    display: inline-block;
+				}
+				&.active {
+					border-top: none;
+					position: relative;
+					bottom: auto;
+					width: auto;
+					text-align: center;
+					padding: 0;
+					&:after {
+						position: relative;
+						border:none;
+						right: auto;
+					}
+				}
+			}
+			&-container {
+				position: absolute;
+    			bottom: -35px;
+				left: 0;
+				width: 100%;
+			}
+		}
+		&__banner {
+			min-height: 387px;
+			margin-top: 0;
+			.b-news__desc-title {
+				font-size: 18px;
+			}
+			.b-news__desc-text {
+				font-size: 12px;
+			}
+			.b-news__desc-date {
+
+			    font-size: 14px;
+			    padding-bottom: 50px;
+
+			}			
+		}
+		#wideslider3 {
+			margin-bottom: 90px;
+		}
+	}
+	#wideslider_counter3.counter,#wideslider_counter4.counter {
+		display: block;
+		text-align: center;
+		padding-bottom: 10px;
+	}
+	.b-shop {
+		&__link {
+			font-size: 12px;
+			}
+		&__form {
+			.button {
+				width: 100%;
+				margin-top: 20px;
+			}
+		}
+		&__desc {
+		    padding: 10px;
+		}
+		&__quantity{
+			&-input {
+				width: 52px;
+			}
+		}
+		&__icons {
+		    padding-bottom: 15px;
+		    padding-top: 15px;
+		}
+		&__price {
+		    padding-bottom: 15px;
+
+		}
+		&__link {
+			margin-bottom: 15px;
+			}
+	} 
+	.footer{
+		display: none;
+		&__mobile {
+		padding: 20px 0;
+		padding-bottom: 0;
+		display: block;
+			&-social {
+				.social__link {
+					font-size: 17px;
+					margin-right: 25px;
+				}
+			}
+			&-button {
+				width: 100%;
+				margin-top: 20px;
+				margin-bottom: 20px;
+			}
+			&-dropdown {
+				cursor: pointer;
+				font-size: 14px;
+				display: block;
+				color: $blue;
+				padding: 15px 0;
+				border-top: 1px solid #cccccc;
+				&:after {
+				    content: '';
+				    position: absolute;
+				    right: 15px;  
+				    margin-top: 5px;
+				    width: 0; 
+					height: 0; 
+					border-left: 5px solid transparent;
+					border-right: 5px solid transparent;
+					border-top: 5px solid $blue;
+				    display: inline-block;
+				    transition: all ease-out .3s;
+				}
+				&.active:after {
+					transform: rotate(-180deg);
+				}
+			}
+			&-links {
+				margin-bottom: 20px;
+				display: none;
+			}
+			&-link {
+				display: block;
+				font-size: 12px;
+				color: $blue;
+			}
+			&-title,&-email {
+				display: block;
+				margin-bottom: 12px;
+			}
+			&-container {
+				margin-bottom: 12px;
+			}
+			&-menu {
+				&.border_bottom {
+					border-bottom: 1px solid #cccccc;
+					margin-bottom: 20px;
+				}
+			}
+			&-bottom {
+				background-color: #fff;
+				padding: 25px 15px;
+				text-transform: uppercase;
+				font-size: 14px;
+				color: #ccc;
+
+			}
+			&-rights {
+				display: inline-block;
+				float: left;
+			}
+			&-webprofy {
+				display: inline-block;
+				color: #ccc;
+				float: right;
+			}
+		}
+	}
 }
 
 // ≥576px
