--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,8 +7,9 @@ $link: #ff0066;
 $grid-gutter-width: 30px;
 $grid-columns: 12;
 $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1255px);
-$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1255px);
+$container-max-widths: (sm: 576px, md: 768px, lg: 992px, xl: 1255px);
 
 $gutter: $grid-gutter-width;
 
-$gutter2: 106px
+$gutter2: 106px;
+$gutter2_media: 40px;
