--- a/app/partials/pages/otzyvy.html
+++ b/app/partials/pages/otzyvy.html
@@ -47,6 +47,7 @@
 						<a href="#" class="b-otzyvy__sertificat">
 							<img class="b-otzyvy__sertificat-img" src="img/otzyvy_sert2.png" alt="otzyvy_sert" />
 						</a>
+						<a class="b-otzyvy__sertificat is-fake"></a>
 						</div>
 							
 					</div>
