--- a/app/partials/pages/index.html
+++ b/app/partials/pages/index.html
@@ -105,6 +105,7 @@
 								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
+						<div class="b-catalog__item is-fake"></div>
 					</div>
 				</div>
 			</div>
@@ -169,6 +170,7 @@
 								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
+						<div class="b-catalog__item is-fake"></div>
 					</div>
 				</div>
 			</div>
@@ -298,6 +300,7 @@
 								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
 							</div>
 						</div>
+						<div class="b-news__item is-fake"></div>
 					</div>
 							
 						</div>
