--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1410,9 +1410,18 @@ b, strong {
 	&__img {
 			padding-bottom: $gutter/2;
 			height: 250px;
-			&-element {
-				width: 100%;
-				height: 100%;
+			position: relative;
+    	overflow: hidden;
+			&-element, .owl-carousel .owl-item &-element {
+		    position: absolute;
+		    display: block;
+		    min-width: 100%;
+		    width: auto;
+		    min-height: 100%;
+		    height: auto;
+		    left: 50%;
+		    top: 50%;
+		    transform: translate(-50%, -50%);
 			}
 
 	}
@@ -2744,6 +2753,9 @@ b, strong {
 			&-img {
 				width: 100%;
 				height: 100%;
+			}
+			&.is-fake {
+				border: none;
 			}
 		}
 	&__container {
