--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -609,7 +609,7 @@ b, strong {
 		background-size: 200%;
 		-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
-		&:hover {
+		.b-topmenu__item:hover & {
 			color: $link;
 			background-position: -100%;
   		transition: background-position 1s linear;
@@ -643,7 +643,8 @@ b, strong {
 		float: right;
 	}
 	&__dropdown {
-		// display: none;
+		display: none;
+		opacity: 0;
 		position: absolute;
 		width: 100%;
 		background-color: #f6f6f6;
@@ -651,6 +652,10 @@ b, strong {
 		left: 0;
 		top: 80px;
 		padding: 40px 0px 150px 0px;
+		&.active{
+			display: block;
+			animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+		}
 		&.search {
 			padding: 20px 0px 40px 0px;
 			
@@ -3454,5 +3459,16 @@ top: 87px;
 	}
 }
 /***********************mobile menu**************/
+/**animation**/
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/**animation end**/
+
 @import "media"; // Always at the end
 	
